# 2025-oct-17-agent-hackathon

./: JUPYTER_SETUP.md  env_info.sh  pyproject.toml  setup.sh  start_jupyter.sh  start_notebook.sh
.jupyter/: jupyter_lab_config.py  jupyter_notebook_config.py
app/: package.json
app/app/: page.tsx
app/app/api/radar/: data.ts  route.ts
app/app/api/radar/[quadrantId]/: route.ts
app/app/components/tech-radar/: Legend.tsx  QuadrantNavigation.tsx  RadarChart.tsx  TechRadar.tsx  index.ts
app/app/tech-radar/: page.tsx
app/app/types/: radar.ts
app/data/: radar.json
datasets/: ai_stack_2025-10-17_18-31-26-916.jsonl
notebooks/: sample.ipynb  senso_ai.ipynb
