[project]
name = "2025-oct-17-agent-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "black>=25.9.0",
    "dotenv>=0.9.9",
    "flake8>=7.3.0",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.9",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
